# lapair

./: .coverage  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LESSONS_LEARNED.md  LICENSE  PROJECT_STATUS.md  README.md  ROADMAP.md  SECURITY.md  compile_commands.json  pyproject.toml
.github/workflows/: ci.yml
bindings/: CMakeLists.txt  pybind_module.cpp
docs/: DESIGN.md  PERFORMANCE.md
docs/ir_design/: IR_Schema.md
lapair/: __init__.py
lapair/analysis/: control_flow.py  data_flow.py
lapair/core/: __init__.py  instructions.py  ir.py  symbol.py  types.py
lapair/frontends/common/: __init__.py  frontend.py
src/: CMakeLists.txt  CPPParser.cpp  IREdge.cpp  IREdge.h  IRGenerator.cpp  IRGenerator.h  IRNode.cpp  IRNode.h  main.cpp
src/analysis/: ProgramSlicing.cpp  ProgramSlicing.h  SymbolicExecution.cpp  SymbolicExecution.h  TaintAnalysis.cpp  TaintAnalysis.h
tests/: CMakeLists.txt  IREdgeTest.cpp  IRNodeTest.cpp  ProgramSlicingTest.cpp  SymbolicExecutionTest.cpp  TaintAnalysisTest.cpp  __init__.py  sample.cpp  test_bindings.py
tests/analysis/: test_available_expressions.py  test_constant_propagation.py  test_control_flow.py  test_data_flow.py  test_live_variable_analysis.py
tests/core/: __init__.py  test_instructions.py  test_ir.py  test_symbol.py  test_types.py
tests/frontends/: __init__.py  test_common.py
